Update portfolio content and screenshots

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <h2>Stores We've Built</h2>
                 <div class="quad-store-grid">
                     <div class="store-card">
-                        <img src="assets/nutripawsplus_mockup_1768228396954.png" alt="Formedgen">
+                        <img src="assets/formedgen_mockup.png" alt="Formedgen">
                         <div class="store-info">
                             <h3>Formedgen</h3>
                             <p class="store-niche">📓 Guided Journals</p>
@@ -481,7 +481,7 @@
                         </div>
                     </div>
                     <div class="store-card">
-                        <img src="assets/florjewelry_mockup_1768228559321.png" alt="Island Hoppers">
+                        <img src="assets/islandhoppers_mockup.png" alt="Island Hoppers">
                         <div class="store-info">
                             <h3>Island Hoppers</h3>
                             <p class="store-niche">🌊 Water Sports</p>
@@ -503,7 +503,7 @@
             <div class="page-inner">
                 <div class="quad-store-grid">
                     <div class="store-card">
-                        <img src="assets/impactmob_mockup_1768228629385.png" alt="Berks Diesel">
+                        <img src="assets/berksdiesel_mockup.png" alt="Berks Diesel">
                         <div class="store-info">
                             <h3>Berks Diesel</h3>
                             <p class="store-niche">🚛 Automotive</p>
