Replace milestone page with 8-image grid layout

--- a/index.html
+++ b/index.html
@@ -343,8 +343,16 @@
                         Built</h2>
                     <p style="font-size: 18px; color: var(--text-muted); margin: 0;">In the Last 90 Days</p>
                 </div>
-                <img src="assets/brands_showcase_100.png" alt="100 Brands Built in 90 Days"
-                    style="width: 100%; height: auto; display: block; margin: 0; padding: 0;">
+                <div class="milestone-grid">
+                    <div class="milestone-item"><img src="assets/showcase_1.png" alt="Store 1"></div>
+                    <div class="milestone-item"><img src="assets/showcase_2.jpg" alt="Store 2"></div>
+                    <div class="milestone-item"><img src="assets/showcase_3.jpg" alt="Store 3"></div>
+                    <div class="milestone-item"><img src="assets/showcase_4.png" alt="Store 4"></div>
+                    <div class="milestone-item"><img src="assets/showcase_5.jpg" alt="Store 5"></div>
+                    <div class="milestone-item"><img src="assets/showcase_6.png" alt="Store 6"></div>
+                    <div class="milestone-item"><img src="assets/showcase_7.png" alt="Store 7"></div>
+                    <div class="milestone-item"><img src="assets/showcase_8.png" alt="Store 8"></div>
+                </div>
             </div>
         </section>
 
