Fix custom business website images and add Con-Struct mockup

--- a/index.html
+++ b/index.html
@@ -506,22 +506,65 @@
             </div>
         </section>
 
-        <!-- PAGE 6: Portfolio (Stores 9-10) -->
-        <section class="page page-portfolio" data-slide="6">
+        <!-- PAGE 6: Custom Business Websites -->
+        <section class="page page-portfolio alt" data-slide="7">
             <div class="page-inner">
+                <span class="page-tag">Custom Builds</span>
+                <h2>Custom <span class="gradient-text">Business Websites</span></h2>
+                <p style="color: #6b7280; font-size: 14px; margin-bottom: 20px;">Beyond Shopify — Full-stack web
+                    applications built on various technologies</p>
                 <div class="quad-store-grid">
-
                     <div class="store-card">
-                        <img src="assets/tkopain_mockup_1768228652382.png" alt="TKO Pain">
+                        <img src="assets/reviewpromax.png" alt="ReviewProMax">
                         <div class="store-info">
-                            <h3>TKO Pain</h3>
-                            <p class="store-niche">💪 Pain Relief</p>
+                            <h3>ReviewProMax</h3>
+                            <p class="store-niche">📚 Amazon Book Review Platform</p>
                             <div class="store-results">
-                                <div class="result"><span>+234%</span>Revenue</div>
-                                <div class="result"><span>1.1s</span>Load</div>
-                                <div class="result"><span>+49%</span>Conv.</div>
+                                <div class="result"><span>React</span>Stack</div>
+                                <div class="result"><span>Node.js</span>Backend</div>
+                                <div class="result"><span>MongoDB</span>DB</div>
                             </div>
-                            <a href="https://tkopain.net/" target="_blank" class="store-link">Visit Store ↗</a>
+                            <a href="https://reviewpromax.com" target="_blank" class="store-link">Visit Site ↗</a>
+                        </div>
+                    </div>
+                    <div class="store-card">
+                        <img src="assets/thestudyhublib.png" alt="TheStudyHubLib">
+                        <div class="store-info">
+                            <h3>TheStudyHubLib</h3>
+                            <p class="store-niche">📖 Library Management System</p>
+                            <div class="store-results">
+                                <div class="result"><span>PHP</span>Stack</div>
+                                <div class="result"><span>MySQL</span>DB</div>
+                                <div class="result"><span>Bootstrap</span>UI</div>
+                            </div>
+                            <a href="https://thestudyhublib.site" target="_blank" class="store-link">Visit Site ↗</a>
+                        </div>
+                    </div>
+                    <div class="store-card">
+                        <img src="assets/construct_mockup.png" alt="Con-Struct">
+                        <div class="store-info">
+                            <h3>Con-Struct</h3>
+                            <p class="store-niche">🏗️ Company Web System</p>
+                            <div class="store-results">
+                                <div class="result"><span>Next.js</span>Stack</div>
+                                <div class="result"><span>Tailwind</span>UI</div>
+                                <div class="result"><span>Vercel</span>Host</div>
+                            </div>
+                            <a href="https://con-struct.bon" target="_blank" class="store-link">Visit Site ↗</a>
+                        </div>
+                    </div>
+                    <div class="store-card">
+                        <img src="assets/voyagevista.png" alt="Voyage Vista">
+                        <div class="store-info">
+                            <h3>Voyage Vista</h3>
+                            <p class="store-niche">✈️ Real-Time Calculation Engine</p>
+                            <div class="store-results">
+                                <div class="result"><span>React</span>Stack</div>
+                                <div class="result"><span>Vite</span>Build</div>
+                                <div class="result"><span>Vercel</span>Host</div>
+                            </div>
+                            <a href="https://vistavoyage.vercel.app/" target="_blank" class="store-link">Visit Site
+                                ↗</a>
                         </div>
                     </div>
                 </div>
@@ -594,6 +637,120 @@
                     <div class="cro-item"><img src="assets/cro_headline.png" alt="Headline"></div>
                 </div>
                 <p class="cro-note">We apply these proven tactics to every store we build</p>
+            </div>
+        </section>
+
+        <!-- PAGE: Pricing -->
+        <section class="page page-pricing" data-slide="12">
+            <div class="page-inner">
+                <div class="text-center" style="margin-bottom: 30px;">
+                    <span class="page-tag">Investment</span>
+                    <h2 style="font-size: 32px; margin: 12px 0 8px 0; color: #0a0a0a;">👑 Build a Brand That Can <span
+                            class="gradient-text">Scale to Millions</span></h2>
+                    <p style="color: #6b7280; font-size: 14px; max-width: 700px; margin: 0 auto;">You're not here to
+                        "get a website built." You're here because you want a real brand — one that looks powerful,
+                        converts consistently, and can scale with ads, content, and traffic without breaking.</p>
+                </div>
+
+                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
+                    <!-- Tier 1: $800 -->
+                    <div
+                        style="background: #ffffff; border: 2px solid rgba(0, 0, 0, 0.1); border-radius: 16px; padding: 24px; display: flex; flex-direction: column;">
+                        <div style="font-size: 28px; margin-bottom: 8px;">💎</div>
+                        <h3 style="font-size: 18px; font-weight: 700; color: #0a0a0a; margin-bottom: 4px;">Premium
+                            Fiverr Launch Package</h3>
+                        <div style="font-size: 32px; font-weight: 800; color: #6366f1; margin-bottom: 12px;">$800</div>
+                        <p style="font-size: 12px; color: #6b7280; margin-bottom: 16px; line-height: 1.5;">The right way
+                            to start. No confusion. No cheap look. For founders who want a professional Shopify
+                            presence.</p>
+                        <ul
+                            style="list-style: none; padding: 0; margin: 0; flex-grow: 1; font-size: 12px; color: #374151;">
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Complete Shopify site setup</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Premium theme installation</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Core pages setup</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Mobile-optimized layout</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Checkout & payments setup</li>
+                            <li style="display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Launch-ready structure</li>
+                        </ul>
+                        <div
+                            style="margin-top: 16px; padding-top: 12px; border-top: 1px solid rgba(0,0,0,0.08); font-size: 11px; color: #6b7280;">
+                            🛒 Perfect for launching your first serious store</div>
+                    </div>
+
+                    <!-- Tier 2: $2,800 (Featured) -->
+                    <div
+                        style="background: linear-gradient(135deg, rgba(99, 102, 241, 0.08), rgba(236, 72, 153, 0.05)); border: 2px solid #6366f1; border-radius: 16px; padding: 24px; display: flex; flex-direction: column; position: relative;">
+                        <div
+                            style="position: absolute; top: -10px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, #6366f1, #ec4899); color: white; font-size: 10px; font-weight: 700; padding: 4px 12px; border-radius: 20px;">
+                            MOST POPULAR</div>
+                        <div style="font-size: 28px; margin-bottom: 8px;">🏆</div>
+                        <h3 style="font-size: 18px; font-weight: 700; color: #0a0a0a; margin-bottom: 4px;">Advanced
+                            Brand System</h3>
+                        <div style="font-size: 32px; font-weight: 800; color: #6366f1; margin-bottom: 12px;">$2,800
+                        </div>
+                        <p style="font-size: 12px; color: #6b7280; margin-bottom: 16px; line-height: 1.5;">Pure website
+                            excellence. Built to convert. Traffic is useless without conversion — this is your revenue
+                            engine.</p>
+                        <ul
+                            style="list-style: none; padding: 0; margin: 0; flex-grow: 1; font-size: 12px; color: #374151;">
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Fully custom Shopify website</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Premium theme deep customization</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> CRO across every section</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Strategic funnel structure</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Speed optimization</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Upsells & buyer flow optimization</li>
+                            <li style="display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Analytics & tracking ready</li>
+                        </ul>
+                        <div
+                            style="margin-top: 16px; padding-top: 12px; border-top: 1px solid rgba(99,102,241,0.2); font-size: 11px; color: #6366f1; font-weight: 600;">
+                            💼 If you plan to run ads, this is your foundation</div>
+                    </div>
+
+                    <!-- Tier 3: $7,000 -->
+                    <div
+                        style="background: linear-gradient(135deg, rgba(245, 158, 11, 0.1), rgba(234, 179, 8, 0.05)); border: 2px solid #f59e0b; border-radius: 16px; padding: 24px; display: flex; flex-direction: column;">
+                        <div style="font-size: 28px; margin-bottom: 8px;">🚀</div>
+                        <h3 style="font-size: 18px; font-weight: 700; color: #0a0a0a; margin-bottom: 4px;">Brand Growth
+                            Empire</h3>
+                        <div style="font-size: 32px; font-weight: 800; color: #f59e0b; margin-bottom: 12px;">$7,000
+                        </div>
+                        <p style="font-size: 12px; color: #6b7280; margin-bottom: 16px; line-height: 1.5;">A full growth
+                            ecosystem built for scale, visibility, and sales. Where brands separate from amateurs.</p>
+                        <ul
+                            style="list-style: none; padding: 0; margin: 0; flex-grow: 1; font-size: 12px; color: #374151;">
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Everything in $2,800 package</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Google Ads + conversion tracking</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Meta Ads ecosystem setup</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> TikTok organic strategy</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Instagram content strategy</li>
+                            <li style="margin-bottom: 8px; display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> High-converting ad pages</li>
+                            <li style="display: flex; align-items: flex-start; gap: 8px;"><span
+                                    style="color: #22c55e;">✓</span> Brand-level execution</li>
+                        </ul>
+                        <div
+                            style="margin-top: 16px; padding-top: 12px; border-top: 1px solid rgba(245,158,11,0.3); font-size: 11px; color: #f59e0b; font-weight: 600;">
+                            📈 For founders who want momentum & authority</div>
+                    </div>
+                </div>
             </div>
         </section>
 
