Update portfolio layout: 70/30 split, bottom crop for Shopify, zoomed center for custom sites, pricing 1200

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
         </section>
 
         <!-- PAGE 6: Custom Business Websites -->
-        <section class="page page-portfolio alt" data-slide="7">
+        <section class="page page-portfolio page-custom-websites alt" data-slide="7">
             <div class="page-inner">
                 <span class="page-tag">Custom Builds</span>
                 <h2>Custom <span class="gradient-text">Business Websites</span></h2>
@@ -515,7 +515,7 @@
                     applications built on various technologies</p>
                 <div class="quad-store-grid">
                     <div class="store-card">
-                        <img src="assets/reviewpromax.png" alt="ReviewProMax">
+                        <img src="assets/reviewpromax_mockup.png" alt="ReviewProMax">
                         <div class="store-info">
                             <h3>ReviewProMax</h3>
                             <p class="store-niche">📚 Amazon Book Review Platform</p>
@@ -659,7 +659,8 @@
                         <div style="font-size: 28px; margin-bottom: 8px;">💎</div>
                         <h3 style="font-size: 18px; font-weight: 700; color: #0a0a0a; margin-bottom: 4px;">Premium
                             Fiverr Launch Package</h3>
-                        <div style="font-size: 32px; font-weight: 800; color: #6366f1; margin-bottom: 12px;">$800</div>
+                        <div style="font-size: 32px; font-weight: 800; color: #6366f1; margin-bottom: 12px;">$1,200
+                        </div>
                         <p style="font-size: 12px; color: #6b7280; margin-bottom: 16px; line-height: 1.5;">The right way
                             to start. No confusion. No cheap look. For founders who want a professional Shopify
                             presence.</p>
