Add mobile responsive CSS for tablets and phones

--- a/index.html
+++ b/index.html
@@ -907,10 +907,15 @@
             <div class="page-inner center">
                 <span class="page-tag">Client Reviews</span>
                 <h2>What Clients Say on <span class="gradient-text">Fiverr</span></h2>
-                <div class="fiverr-profile">
-                    <img src="assets/fiverr_profile.png" alt="Fiverr Profile" class="fiverr-profile-img">
-                    <div class="fiverr-badge">⭐ 4.9 Rating • 100+ Reviews • Fiverr Pro Vetted</div>
+                <div class="fiverr-profile"
+                    style="display: flex; gap: 20px; justify-content: center; align-items: flex-start; flex-wrap: wrap;">
+                    <img src="assets/shreyansh_profile.png" alt="Shreyansh Singh Fiverr Profile"
+                        class="fiverr-profile-img"
+                        style="max-width: 350px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <img src="assets/fiverr_profile.png" alt="Fiverr Profile" class="fiverr-profile-img"
+                        style="max-width: 350px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
                 </div>
+                <div class="fiverr-badge">⭐ 4.9 Rating • 100+ Reviews • Fiverr Pro Vetted</div>
                 <div class="fiverr-reviews-grid">
                     <div class="fiverr-review"><img src="assets/fiverr_review1.png" alt="Review"></div>
                     <div class="fiverr-review"><img src="assets/fiverr_review2.png" alt="Review"></div>
@@ -939,8 +944,12 @@
             <div class="page-inner center">
                 <span class="page-tag">More Reviews</span>
                 <h2>Even More <span class="gradient-text">5-Star</span> Reviews</h2>
-                <div class="fiverr-reviews-single">
-                    <img src="assets/fiverr_review7.png" alt="Review" class="fiverr-review-large">
+                <div class="fiverr-reviews-grid">
+                    <div class="fiverr-review"><img src="assets/fiverr_review7.png" alt="Review"></div>
+                    <div class="fiverr-review"><img src="assets/fiverr_review8.png" alt="Review"></div>
+                </div>
+                <div class="fiverr-reviews-grid">
+                    <div class="fiverr-review"><img src="assets/fiverr_review9.png" alt="Review"></div>
                 </div>
                 <a href="https://www.fiverr.com/shreyanshsin261/build-shopify-store-design-redesign-copy-ecommerce-website-dropshipping-store"
                     target="_blank" class="fiverr-link">🛒 View All Reviews on Fiverr →</a>
