Add grid classes for mobile responsive layouts

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                         converts consistently, and can scale with ads, content, and traffic without breaking.</p>
                 </div>
 
-                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
+                <div class="pricing-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
                     <!-- Tier 1: $800 -->
                     <div
                         style="background: #ffffff; border: 2px solid rgba(0, 0, 0, 0.1); border-radius: 16px; padding: 24px; display: flex; flex-direction: column;">
@@ -765,7 +765,7 @@
                     <p style="color: #6b7280; font-size: 15px;">Premium development solutions for ambitious brands</p>
                 </div>
 
-                <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 24px;">
+                <div class="services-grid" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 24px;">
                     <!-- Service 1 -->
                     <div
                         style="background: #ffffff; border: 2px solid rgba(0, 0, 0, 0.1); border-radius: 12px; padding: 28px; transition: all 0.3s;">
@@ -845,7 +845,7 @@
                     <p style="color: #6b7280; font-size: 15px;">From concept to market dominance</p>
                 </div>
 
-                <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 24px;">
+                <div class="process-grid" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 24px;">
                     <!-- Step 1 -->
                     <div
                         style="background: linear-gradient(135deg, rgba(99, 102, 241, 0.08), rgba(236, 72, 153, 0.04)); border: 2px solid rgba(99, 102, 241, 0.3); border-radius: 12px; padding: 28px;">
