--- a/index.html
+++ b/index.html
@@ -571,6 +571,70 @@
             </div>
         </section>
 
+        <!-- PAGE 6B: More Software Projects -->
+        <section class="page page-portfolio page-custom-websites" data-slide="7">
+            <div class="page-inner">
+                <span class="page-tag">Software Development</span>
+                <h2>More <span class="gradient-text">Software Projects</span></h2>
+                <p style="color: #6b7280; font-size: 14px; margin-bottom: 20px;">Enterprise-grade applications with
+                    responsive mobile + desktop experiences</p>
+                <div class="quad-store-grid">
+                    <div class="store-card">
+                        <img src="assets/fintech_mockup.png" alt="FinancePro">
+                        <div class="store-info">
+                            <h3>FinancePro</h3>
+                            <p class="store-niche">💰 Fintech Banking Dashboard</p>
+                            <div class="store-results">
+                                <div class="result"><span>React</span>Stack</div>
+                                <div class="result"><span>Node.js</span>API</div>
+                                <div class="result"><span>PostgreSQL</span>DB</div>
+                            </div>
+                            <a href="#" class="store-link">View Demo ↗</a>
+                        </div>
+                    </div>
+                    <div class="store-card">
+                        <img src="assets/healthcare_mockup.png" alt="MediCare">
+                        <div class="store-info">
+                            <h3>MediCare Plus</h3>
+                            <p class="store-niche">🏥 Telemedicine Platform</p>
+                            <div class="store-results">
+                                <div class="result"><span>Next.js</span>Stack</div>
+                                <div class="result"><span>GraphQL</span>API</div>
+                                <div class="result"><span>MongoDB</span>DB</div>
+                            </div>
+                            <a href="#" class="store-link">View Demo ↗</a>
+                        </div>
+                    </div>
+                    <div class="store-card">
+                        <img src="assets/realestate_mockup.png" alt="EstateFlow">
+                        <div class="store-info">
+                            <h3>EstateFlow</h3>
+                            <p class="store-niche">🏠 Property Management</p>
+                            <div class="store-results">
+                                <div class="result"><span>Vue.js</span>Stack</div>
+                                <div class="result"><span>Python</span>API</div>
+                                <div class="result"><span>MySQL</span>DB</div>
+                            </div>
+                            <a href="#" class="store-link">View Demo ↗</a>
+                        </div>
+                    </div>
+                    <div class="store-card">
+                        <img src="assets/saas_mockup.png" alt="DataPulse">
+                        <div class="store-info">
+                            <h3>DataPulse</h3>
+                            <p class="store-niche">📊 SaaS Analytics Platform</p>
+                            <div class="store-results">
+                                <div class="result"><span>React</span>Stack</div>
+                                <div class="result"><span>Express</span>API</div>
+                                <div class="result"><span>Redis</span>Cache</div>
+                            </div>
+                            <a href="#" class="store-link">View Demo ↗</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- PAGE 7: Client Logos -->
         <section class="page page-clients" data-slide="7">
             <div class="page-inner center">
@@ -957,27 +1021,6 @@
         </section>
 
         <!-- PAGE 16: Results -->
-        <section class="page page-results" data-slide="16">
-            <div class="page-inner center">
-                <span class="page-tag">Proven Results</span>
-                <h2>What We Deliver</h2>
-                <div class="mega-stats-grid">
-                    <div class="mega-stat"><span class="mega-value">1000+</span><span class="mega-label">Stores
-                            Built</span></div>
-                    <div class="mega-stat featured"><span class="mega-value">$40M+</span><span class="mega-label">Sales
-                            Generated</span></div>
-                    <div class="mega-stat"><span class="mega-value">4.2%</span><span class="mega-label">Conversion
-                            Rate</span></div>
-                    <div class="mega-stat"><span class="mega-value">98%</span><span
-                            class="mega-label">Satisfaction</span>
-                    </div>
-                </div>
-                <div class="testimonial-box">
-                    <p>"Digital Heroes transformed our store completely. Sales increased 250% in the first month!"</p>
-                    <div class="testimonial-author"><span>— Happy Client</span><span class="stars">★★★★★</span></div>
-                </div>
-            </div>
-        </section>
 
         <!-- PAGE 17: FAQ (All Questions) -->
         <section class="page page-faq" data-slide="17">
