Update ExpenseFlow and ConferoPro with new images and descriptions

--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
                     <div class="store-card">
                         <img src="assets/fintech_mockup.png" alt="FinancePro">
                         <div class="store-info">
-                            <h3>FinancePro</h3>
-                            <p class="store-niche">💰 Fintech Banking Dashboard</p>
+                            <h3>ExpenseFlow</h3>
+                            <p class="store-niche">💰 Expense Management System</p>
                             <div class="store-results">
                                 <div class="result"><span>React</span>Stack</div>
                                 <div class="result"><span>Node.js</span>API</div>
@@ -631,8 +631,8 @@
                     <div class="store-card">
                         <img src="assets/saas_mockup.png" alt="DataPulse">
                         <div class="store-info">
-                            <h3>DataPulse</h3>
-                            <p class="store-niche">📊 SaaS Analytics Platform</p>
+                            <h3>ConferoPro</h3>
+                            <p class="store-niche">📹 Video Conferencing Platform</p>
                             <div class="store-results">
                                 <div class="result"><span>React</span>Stack</div>
                                 <div class="result"><span>Express</span>API</div>
