All 4 software projects: AI branding with premium enterprise screenshots

--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
                     <div class="store-card">
                         <img src="assets/fintech_mockup.png" alt="FinancePro">
                         <div class="store-info">
-                            <h3>ExpenseFlow</h3>
-                            <p class="store-niche">💰 Expense Management System</p>
+                            <h3>ExpenseFlow AI</h3>
+                            <p class="store-niche">🤖 AI Expense Management</p>
                             <div class="store-results">
                                 <div class="result"><span>React</span>Stack</div>
                                 <div class="result"><span>Node.js</span>API</div>
@@ -605,8 +605,8 @@
                     <div class="store-card">
                         <img src="assets/healthcare_mockup.png" alt="MediCare">
                         <div class="store-info">
-                            <h3>MediCare Plus</h3>
-                            <p class="store-niche">🏥 Telemedicine Platform</p>
+                            <h3>MediCare Plus AI</h3>
+                            <p class="store-niche">🤖 AI Healthcare Platform</p>
                             <div class="store-results">
                                 <div class="result"><span>Next.js</span>Stack</div>
                                 <div class="result"><span>GraphQL</span>API</div>
@@ -618,8 +618,8 @@
                     <div class="store-card">
                         <img src="assets/realestate_mockup.png" alt="EstateFlow">
                         <div class="store-info">
-                            <h3>EstateFlow</h3>
-                            <p class="store-niche">🏠 Property Management</p>
+                            <h3>EstateFlow AI</h3>
+                            <p class="store-niche">🤖 AI Property Management</p>
                             <div class="store-results">
                                 <div class="result"><span>Vue.js</span>Stack</div>
                                 <div class="result"><span>Python</span>API</div>
@@ -631,8 +631,8 @@
                     <div class="store-card">
                         <img src="assets/saas_mockup.png" alt="DataPulse">
                         <div class="store-info">
-                            <h3>ConferoPro</h3>
-                            <p class="store-niche">📹 Video Conferencing Platform</p>
+                            <h3>ConferoPro AI</h3>
+                            <p class="store-niche">🤖 AI Video Conferencing</p>
                             <div class="store-results">
                                 <div class="result"><span>React</span>Stack</div>
                                 <div class="result"><span>Express</span>API</div>
